# kaissa

./: .clangd  README.md  play.py
cpp/: .gitignore  CMakeLists.txt  README.md  conanfile.py
cpp/conan_profiles/: clang-linux-release
cpp/src/: board.cpp  board.hpp  engine.cpp  engine.hpp  main.cpp  move.hpp  params.hpp  position_utils.hpp  search.cpp  search.hpp  string_utils.hpp  uci.cpp  uci.hpp
cpp/tests/: test_position_utils.cpp  test_search.cpp
rust/: .gitignore  Cargo.toml
rust/src/: board.rs  chessmove.rs  engine.rs  main.rs  movegen.rs  params.rs  position_utils.rs  search.rs  uci.rs
